--- a/package.json
+++ b/package.json
@@ -44,6 +44,13 @@
     "typings": "0.8.1"
   },
   "dependencies": {
-    "sprintf-js": "^1.0.3"
+    "sprintf-js": "^1.0.3",
+    "colors": "^1.1.2",
+    "diff": "^2.2.1",
+    "findup-sync": "~0.3.0",
+    "glob": "^7.0.3",
+    "optimist": "~0.6.0",
+    "resolve": "^1.1.7",
+    "underscore.string": "^3.3.4"
   }
 }
