--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
   "exclude": [
       "typings/browser.d.ts",
       "typings/browser",
-      "node_modules"
+      "node_modules",
+      "test"
   ]
 }
