--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "typings": "typings",
-    "release": "rimraf dist && tsc && npm t && cp package.json README.md dist/src && ts-node build/links.ts --src ./dist/src",
+    "release": "rimraf dist && tsc && cp package.json README.md dist/lib",
     "test": "rimraf dist && tsc && mocha --compilers ts:ts-node/register",
     "test:watch": "npm run test -- -w",
-    "tsc": "tsc",
+    "build": "tsc && babel dist/esm/lib --out-dir dist/es5",
     "tscw": "tsc -w"
   },
   "repository": {
@@ -34,6 +34,9 @@
   },
   "homepage": "https://github.com/mgechev/codelyzer#readme",
   "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-cli": "^6.10.1",
+    "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
     "chai-spies": "^0.7.1",
     "minimalist": "1.0.0",
